# ramanujan

./: .gitmodules  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: install-dev-tools.sh
.github/workflows/: ci.yml
.husky/: pre-commmit
src/ramanujan/: attentions.py  configs.py  data_loader.py  mlp.py  model.py  trainer.py
src/utils/: file_loader.py  gpt2_inspector.py
