[project]
name = "ramanujan"
version = "0.1.0"
authors = [
    { name = "Bowen", email = "bowen.li.hurd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ramanujan"]
